--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/mini-vue.cjs.js",
   "module": "lib/mini-vue.esm.js",
   "scripts": {
-    "build": "rollup -c",
+    "build": "node build.js",
     "build:type": "tsc -p ./tsconfig.type.json",
     "test": "jest --no-cache",
     "serve": "http-server -c-1"
@@ -13,12 +13,12 @@
   "author": "zenoslin",
   "license": "ISC",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^13.0.0",
-    "@rollup/plugin-node-resolve": "^8.1.0",
+    "@rollup/plugin-commonjs": "^18.0.0",
+    "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.3.3",
     "@types/jest": "^26.0.0",
     "jest": "^26.0.1",
-    "rollup": "^2.17.1",
+    "rollup": "~2.38.5",
     "rollup-plugin-sourcemaps": "^0.6.2",
     "rollup-plugin-typescript": "^1.0.1",
     "rollup-plugin-typescript2": "^0.30.0",
